did the flex exercises

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -3,7 +3,7 @@ you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
 body {
-  margin: 0;
+  margin: 0px;
   background: #eee;
   font-family: Besley, serif;
 }
@@ -12,6 +12,20 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.left {
+
+  display: flex;
+  justify-content: flex-start;
+}
+
+.links {
+  display: flex;
+  gap: 8px;
 }
 
 .profile-image {
@@ -29,18 +43,29 @@ body {
   font-style: italic;
 }
 
+.right {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
+  align-items: center;
+
+}
+
 button {
   border: none;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  
+  
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  display: flex;
 }
 
 ul {
