--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,22 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  padding: 32px;
+}
+
+.items {
+
+  justify-content: space-between;
+  display: flex;
+  gap: 52px;
+}
+
+.text {
+  max-width: 200px;
+  display: flex;
+  flex-wrap: wrap;
+
 }
 
 /* do not edit this footer */
